[gd_scene load_steps=24 format=3 uid="uid://dxuc27hbuglwd"]

[ext_resource type="Texture2D" uid="uid://sr4dyjumh4we" path="res://Assets/Cenarios/Cenario_CorredorPrincipal.jpg" id="1_7016a"]
[ext_resource type="Script" path="res://Scripts/level.gd" id="1_dfi0w"]
[ext_resource type="PackedScene" uid="uid://by52luhmxa3am" path="res://Cenas/player.tscn" id="1_k33y0"]
[ext_resource type="Texture2D" uid="uid://bqu0dvoh2y3hb" path="res://Assets/Luzes/254 Sem Titulo_20241112195540.jpg" id="4_5qfqv"]
[ext_resource type="PackedScene" uid="uid://c0gkuaj4n6xbs" path="res://Assets/NPCs/Palhaco/palhaco.tscn" id="4_p43o3"]
[ext_resource type="PackedScene" uid="uid://bmhjk4s4js25r" path="res://Assets/NPCs/Metaleiro/Metaleiro.tscn" id="8_t61et"]
[ext_resource type="PackedScene" uid="uid://bjcass8lqq7ei" path="res://Cenas/hud.tscn" id="9_vq1rq"]
[ext_resource type="FontFile" uid="uid://vsju2iahj2ny" path="res://Assets/Fonts/Marquen.ttf" id="10_6mpn2"]
[ext_resource type="PackedScene" uid="uid://d3uf5u0oyyiw5" path="res://Cenas/pause_menu.tscn" id="10_678e0"]
[ext_resource type="AudioStream" uid="uid://c1pfs4cupns12" path="res://Assets/Songs/escola.mp3" id="10_b88ea"]

[sub_resource type="LabelSettings" id="LabelSettings_nr6sc"]
font_size = 70

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fq2dn"]
size = Vector2(367, 508)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fmy4h"]
size = Vector2(6309, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hpw82"]
size = Vector2(6294, 261)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ijst0"]
size = Vector2(25.875, 903.688)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_4rfmd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d5qng"]
size = Vector2(263, 663)

[sub_resource type="LabelSettings" id="LabelSettings_k4bee"]
line_spacing = 10.0
font = ExtResource("10_6mpn2")
font_size = 28
font_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_vboqu"]
resource_name = "FadeIn"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_lvp1j"]
resource_name = "FadeOut"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.466667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_iekgm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vpm2k"]
_data = {
"FadeIn": SubResource("Animation_vboqu"),
"FadeOut": SubResource("Animation_lvp1j"),
"RESET": SubResource("Animation_iekgm")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ox8hu"]
size = Vector2(184, 459)

[node name="Level" type="Node2D"]
position = Vector2(-9, -3)
scale = Vector2(0.396075, 0.396075)
script = ExtResource("1_dfi0w")

[node name="Tarefas" type="Label" parent="."]
offset_left = 123.0
offset_top = 1067.0
offset_right = 2823.0
offset_bottom = 2140.0
scale = Vector2(1, 0.989746)
text = "O que tem pra fazer ainda: 

- Adicionar barra de vida e ultimate no Juca ðŸ†—
- Fazer ultimate do Juca e do Boss ðŸ†—
- Adicionar Knockback nos ataques do Boss  ðŸ†—
- AnimaÃ§Ã£o do boss com defeito ðŸ†—
- AnimaÃ§Ã£o do Juca com defeito ðŸ†—
- Boss nÃ£o persegue e nÃ£o Filipa ðŸ†—
- O ataque do Juca sÃ³ funciona quando a animaÃ§Ã£o Ã© finalizada  ðŸ†—
- AnimaÃ§Ã£o de morte do boss nÃ£o funciona ðŸ†—
- Trocar todos os dÃ­Ã¡logos quando for entregar as cartas ðŸ†—
- Fixar as cartas no topo da tela ðŸ†—
- Adicionar tela de configuraÃ§Ãµes no menu
- Adicionar tela de Pause quando clicar ESC
- Fazer tela inicial ficar em tela cheia ðŸ†—
"
label_settings = SubResource("LabelSettings_nr6sc")

[node name="CenarioCorredorPrincipal" type="Sprite2D" parent="."]
position = Vector2(3162, 457)
scale = Vector2(0.992001, 0.992502)
texture = ExtResource("1_7016a")

[node name="Node2D" type="Node2D" parent="CenarioCorredorPrincipal"]

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(5000, 0)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(654.5, 399)
shape = SubResource("RectangleShape2D_fq2dn")

[node name="teto" type="StaticBody2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="teto"]
position = Vector2(3144.5, 0)
shape = SubResource("RectangleShape2D_fmy4h")

[node name="Chao" type="StaticBody2D" parent="."]
position = Vector2(597, 538)
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chao"]
position = Vector2(2557, 250.5)
shape = SubResource("RectangleShape2D_hpw82")

[node name="Parede 1" type="StaticBody2D" parent="."]
position = Vector2(119, 232)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Parede 1"]
position = Vector2(-76.875, 221)
shape = SubResource("RectangleShape2D_ijst0")

[node name="Parede 2" type="StaticBody2D" parent="."]
position = Vector2(6216, 251)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Parede 2"]
position = Vector2(70, 214)
shape = SubResource("RectangleShape2D_ijst0")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_b88ea")
volume_db = -10.55
autoplay = true
parameters/looping = true

[node name="Metaeiro" parent="." instance=ExtResource("8_t61et")]
position = Vector2(2856, 400)
scale = Vector2(0.745642, 0.745642)

[node name="PalhaÃ§o" parent="." instance=ExtResource("4_p43o3")]
position = Vector2(1281, 412)
scale = Vector2(0.80188, 0.80188)

[node name="Sprite2D2" type="Sprite2D" parent="."]
visible = false
position = Vector2(3031, -290)

[node name="PointLight2D" type="PointLight2D" parent="Sprite2D2"]
visible = false
position = Vector2(14, -15)
energy = 0.3
shadow_enabled = true
shadow_color = Color(0, 0, 0, 0.854902)
texture = ExtResource("4_5qfqv")
texture_scale = 1.7

[node name="Player" parent="." instance=ExtResource("1_k33y0")]
position = Vector2(4997, 453)

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(20.5239, -2.52475)
zoom = Vector2(1.1, 1.1)
limit_left = 0
limit_top = 0
limit_right = 2487
limit_bottom = 354

[node name="Luz" type="Sprite2D" parent="."]
position = Vector2(95, 0)

[node name="PointLight2D" type="PointLight2D" parent="Luz"]
position = Vector2(3609, -171)
scale = Vector2(1, 1.08333)
energy = 0.25
shadow_enabled = true
shadow_color = Color(0, 0, 0, 0.627451)
texture = ExtResource("4_5qfqv")
texture_scale = 2.0

[node name="Luz2" type="Sprite2D" parent="."]
position = Vector2(190, 0)

[node name="PointLight2D" type="PointLight2D" parent="Luz2"]
position = Vector2(1011, -195.999)
scale = Vector2(1, 1.01693)
energy = 0.25
shadow_enabled = true
shadow_color = Color(0, 0, 0, 0.627451)
texture = ExtResource("4_5qfqv")
texture_scale = 2.0

[node name="Luz3" type="Sprite2D" parent="."]
position = Vector2(380, 0)

[node name="PointLight2D" type="PointLight2D" parent="Luz3"]
position = Vector2(5353, -171)
scale = Vector2(1, 1.08333)
energy = 0.25
shadow_enabled = true
shadow_color = Color(0, 0, 0, 0.627451)
texture = ExtResource("4_5qfqv")
texture_scale = 2.0

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="LightOccluder2D" type="LightOccluder2D" parent="Sprite2D"]
position = Vector2(247, -188)
occluder = SubResource("OccluderPolygon2D_4rfmd")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.882618, 0.831811, 0.645784, 1)

[node name="Node2D" type="Node2D" parent="."]

[node name="Saida" type="Area2D" parent="."]
position = Vector2(171, 346)
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Saida"]
position = Vector2(-16.5, -1.5)
shape = SubResource("RectangleShape2D_d5qng")

[node name="LabelSaida" type="Label" parent="."]
offset_left = 55.0
offset_top = 214.0
offset_right = 376.0
offset_bottom = 257.0
size_flags_vertical = 0
text = "Clique E para Sair"
label_settings = SubResource("LabelSettings_k4bee")

[node name="transition" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="transition"]
offset_right = 6396.0
offset_bottom = 930.0
color = Color(0, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="transition"]
libraries = {
"": SubResource("AnimationLibrary_vpm2k")
}

[node name="Sala_de_Aula" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sala_de_Aula"]
position = Vector2(4468, 426.5)
shape = SubResource("RectangleShape2D_ox8hu")

[node name="Sala_de_Aula2" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sala_de_Aula2"]
position = Vector2(3602, 427)
shape = SubResource("RectangleShape2D_ox8hu")

[node name="Sala_de_Aula3" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sala_de_Aula3"]
position = Vector2(3292, 428)
shape = SubResource("RectangleShape2D_ox8hu")

[node name="Sala_de_Aula4" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sala_de_Aula4"]
position = Vector2(2420, 421)
shape = SubResource("RectangleShape2D_ox8hu")

[node name="HUD" parent="." instance=ExtResource("9_vq1rq")]

[node name="pause_menu" parent="." instance=ExtResource("10_678e0")]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_2_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Saida" to="." method="_on_saida_body_entered"]
[connection signal="body_exited" from="Saida" to="." method="_on_saida_body_exited"]
[connection signal="animation_finished" from="transition/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="Sala_de_Aula" to="." method="_on_sala_de_aula_body_entered"]
[connection signal="body_exited" from="Sala_de_Aula" to="." method="_on_sala_de_aula_body_exited"]
[connection signal="body_entered" from="Sala_de_Aula2" to="." method="_on_sala_de_aula_2_body_entered"]
[connection signal="body_exited" from="Sala_de_Aula2" to="." method="_on_sala_de_aula_2_body_exited"]
[connection signal="body_entered" from="Sala_de_Aula3" to="." method="_on_sala_de_aula_3_body_entered"]
[connection signal="body_exited" from="Sala_de_Aula3" to="." method="_on_sala_de_aula_3_body_exited"]
[connection signal="body_entered" from="Sala_de_Aula4" to="." method="_on_sala_de_aula_4_body_entered"]
[connection signal="body_exited" from="Sala_de_Aula4" to="." method="_on_sala_de_aula_4_body_exited"]
